# opentelemetry-cpp

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  WORKSPACE  cmake_install.cmake
examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/batch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/batch_logs_to_console/: BUILD  CMakeLists.txt  README.md
examples/elasticsearch/: BUILD  README.md  main.cc
examples/elasticsearch/foo_library/: foo_library.cc
examples/elasticsearch_logs/: BUILD  README.md  main.cc
examples/http_example/: BUILD  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  example_http  main.cc
examples/logs_batch_ostream/: main.cc
examples/logs_simple/: BUILD  CMakeLists.txt  README.md  main.cc
examples/logs_simple/foo_library/: foo_library.cc
examples/logs_simple_ostream/: BUILD  README.md  main.cc
examples/logs_simple_ostream/foo_library/: foo_library.cc
examples/metrics_simple/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/multithreaded/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/plugin/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/plugin/load/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/plugin/plugin/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/simple/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/simple_log_ostream/: README.md  main.cc
examples/traces_and_logs/: BUILD  CMakeLists.txt  README.md  main.cc
examples/traces_and_logs/foo_library/: foo_library.cc
exporters/elasticsearch/: BUILD  CMakeLists.txt
exporters/elasticsearch/src/: es_log_exporter.cc
exporters/elasticsearch/test/: es_log_exporter_test.cc
exporters/ostream/: BUILD  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
exporters/ostream/src/: log_exporter.cc  (+1 more)
(+136 files in other folders)
